--- a/src/styles/Vote.css
+++ b/src/styles/Vote.css
@@ -1,17 +1,20 @@
 body {
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.vote {
+.vote-div {
   width: 100vw;
   height: 100vh;
   
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
 
-  gap: 2%;
+  gap: 5%;
 }
 
 .party-likud,
@@ -19,7 +22,7 @@ body {
 .party-haavoda,
 .party-merech {
   width: 40%;
-  height: 40%;
+  height: 30%;
 
   padding: 10px 10px 20px 10px;
   border: 1px solid #BFBFBF;
@@ -41,4 +44,37 @@ body {
 
 .party-merech{
   background: url(../img/merech.jpg) no-repeat center center/contain;
+}
+
+.done,
+.change {
+  width: 5rem;
+  height: 5rem;
+
+  width: 50%;
+  height: 50%;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5%;
+
+  width: 100%;
+  height: 80%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 20%;
+}
+
+.hidden {
+  visibility: hidden;
 }
