voting-app ver 1.8

--- a/src/styles/Admin.css
+++ b/src/styles/Admin.css
@@ -36,7 +36,7 @@ button.reset {
 }
 
 body {
-  background: white;
+  background: url(../img/vote-intro.jpg) no-repeat center center/contain;
   display: flex;
   justify-content: center;
   align-items: center;
