--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -453,3 +453,15 @@ Modal
   margin-top: 2rem;
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-intro {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
